# cio-src

./: .gitignore  README.md  cio.sdf.REMOVED.git-id  cio.sln  coginvasion.enigma  launcher.enigma  libcoginvasion.enigma
ccoginvasion/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ReadMe.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ccoginvasion.sln  ccoginvasion.vcxproj  ccoginvasion.vcxproj.filters  ccoginvasion_igate.cpp  ccoginvasion_module.cpp  cmake_install.cmake  config.ini  imgui.ini  interrogate.bat
ccoginvasion/scripts/: setup.py
ccoginvasion/source/: audioClip.cxx  audioclip.cpp  audioclip.h  cNametag.cxx  cNametag.h  cNametag3d.cxx  cNametag3d.h  c_nametag.cpp  c_nametag.h  c_nametag3d.cpp  c_nametag3d.h  ccoginvasion.cpp  ciShaderGenerator.cxx  ciShaderGenerator.h  cnametag.cpp  cnametag3d.cpp  config_ccoginvasion.cpp  config_ccoginvasion.cxx  config_ccoginvasion.h  ctMusicData.cxx  ctMusicData.h  ctMusicMgr.cxx  ctMusicMgr.h  ct_music_data.cpp  ct_music_data.h  ct_music_mgr.cpp  ct_music_mgr.h  ct_musicdata.cpp  ct_musicdata.h  ct_musicmgr.cpp  ct_musicmgr.h  lerper.cpp  lerper.cxx  lerper.h  smartcamera_bullet.cpp  smartcamera_bullet.h  stdafx.cpp  stdafx.h  suitPathFinderAI.cxx  suitPathFinderAI.h  (+4 more)
extras/: bg-old.pdn  bg.pdn  bg.tif  factory_sneak_idea.txt  mat_test.py  toon_battle_new_maps.txt  toon_code.txt  ttc_tournament_vp_idea.txt  uno_test.py
game/: Write_Hashes.bat  aisystem.txt  bg.pdn  bg.tif  bsp_generated_f.glsl  ccoginvasion.pyd  ccoginvasion_test.py  cog_bldg_executive_flr.mb  cogai.txt  crash_minigame_prototype.py  crash_platform.bam  dgm_clap.mb  game.pyproj  generate_headers.bat  heads.py  libpandadna.pyd  mssmp3.asi  mssogg.asi  rope_test.py  settings.json  start_ai_server.bat  start_astron_server.bat  start_ci.bat  start_uber_server.bat  street_modules_beta.mb  test.py  test_bldgs.py  test_bsp.py  test_bsp_run.bat  todo.txt  tool_Multifile.py  toontown_central_beta.mb  tt_a_chr_dgl_shorts_legs_strafe.mb  tt_a_chr_dgl_shorts_torso_strafe.mb  tt_a_chr_dgl_skirt_torso_strafe.mb  (+8 more)
quest/: QuestPoster.py  (+1 more)
(+1775 files in other folders)
